Changing color background to black & color text to gray

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 h1 {
-    color: aqua;
+    color: gray;
     font-size: xx-large;
     text-align: center;
 }
 body{
-    background: blue;
+    background: black;
 }
